--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
       Address Book
@@ -7,34 +7,17 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <table class="address-table" mat-table [dataSource]="addressService.addresses">
+  <div class="table-container">
+    <table class="address-table" mat-table [dataSource]="addressService.addresses" fixedLayout=true>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let address"> {{address.name}} </td>
+    <ng-container [matColumnDef]="column.title"  *ngFor="let column of columns">
+      <th class="column header" mat-header-cell *matHeaderCellDef>{{column.title}}</th>
+      <td class="column" mat-cell *matCellDef="let address">{{address[column.attr]}}</td>
     </ng-container>
 
-    <!-- Address Column -->
-    <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef> Address </th>
-      <td mat-cell *matCellDef="let address"> {{address.address}} </td>
-    </ng-container>
-
-    <!-- Email Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
-      <td mat-cell *matCellDef="let address"> {{address.email}} </td>
-    </ng-container>
-
-    <!-- Phone Column -->
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef> Phone </th>
-      <td mat-cell *matCellDef="let address"> {{address.phone}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
 
 </ion-content>
