--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** other **/
+  --ion-background-color: white;
 }
 
 @media (prefers-color-scheme: dark) {
