created edit address component, added button to main page to open edit address component in a modal, updated address interface to be capitalized

--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -20,4 +20,9 @@
   </table>
 </div>
 
+<ion-fab vertical="top" horizontal="end" slot="fixed" edge=true>
+  <ion-fab-button size="small" color="secondary" (click)="createAddress()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 </ion-content>
