renamed things from address to contact reduce confusion of address objects with address attributes, edit address changed to edit contact, address service changed to address book service, address interface to contact; also updated variable and function names

--- a/src/app/components/address-book/address-book.component.scss
+++ b/src/app/components/address-book/address-book.component.scss
@@ -1,7 +1,7 @@
 .table-container{
     margin: 0 15px;
 
-    .address-table{
+    .contacts-table{
         width: 100%;
         
         .column{
