--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -8,20 +8,20 @@
 
 <ion-content [fullscreen]="true">
   <div class="table-container">
-    <table class="address-table" mat-table [dataSource]="addressService.sortedAddresses" fixedLayout=true>
+    <table class="contacts-table" mat-table [dataSource]="addressBookService.sortedContacts" fixedLayout=true>
 
     <ng-container [matColumnDef]="column.title"  *ngFor="let column of columns">
       <th class="column header" mat-header-cell *matHeaderCellDef>{{column.title}}</th>
-      <td class="column" mat-cell *matCellDef="let address">{{ column.pipe ? column.pipe.transform(address[column.attr]) : address[column.attr] }}</td>
+      <td class="column" mat-cell *matCellDef="let contact">{{ column.pipe ? column.pipe.transform(contact[column.attr]) : contact[column.attr] }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let address; columns: displayedColumns;" class="clickable" (click)="viewContact(address)"></tr>
+    <tr mat-row *matRowDef="let contact; columns: displayedColumns;" class="clickable" (click)="viewContact(contact)"></tr>
   </table>
 </div>
 
 <ion-fab vertical="top" horizontal="end" slot="fixed" edge=true>
-  <ion-fab-button size="small" color="secondary" (click)="createAddress()">
+  <ion-fab-button size="small" color="secondary" (click)="createContact()">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
