--- a/src/app/components/address-book/edit-contact/edit-contact.component.html
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.html
@@ -6,33 +6,33 @@
     <ion-button slot="end" fill="clear" (click)="delete()" color="danger" size="small" *ngIf="edit">
       <ion-icon name="trash-outline"></ion-icon>
     </ion-button>
-    <ion-button slot="end" fill="clear" (click)="cancel(addressForm)" color="medium" size="small">
+    <ion-button slot="end" fill="clear" (click)="cancel(contactForm)" color="medium" size="small">
       <ion-icon name="close-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
-<form #addressForm="ngForm" (ngSubmit)="save(addressForm)" (keyup.enter)="save(addressForm)" class="content">
+<form #contactForm="ngForm" (ngSubmit)="save(contactForm)" (keyup.enter)="save(contactForm)" class="content">
   <ion-content>
       <ion-item class="input-field bottom-margin">
         <ion-label position="floating">Name</ion-label>
-        <ion-input name="name" [(ngModel)]="address.name"></ion-input>
+        <ion-input name="name" [(ngModel)]="contact.name"></ion-input>
       </ion-item>
       <ion-item class="input-field bottom-margin">
         <ion-label position="floating">Address</ion-label>
-        <ion-input name="address" [(ngModel)]="address.address"></ion-input>
+        <ion-input name="address" [(ngModel)]="contact.address"></ion-input>
       </ion-item>
       <ion-item class="input-field">
         <ion-label position="floating">Email</ion-label>
-        <ion-input [(ngModel)]="address.email" name="email" email></ion-input>
+        <ion-input [(ngModel)]="contact.email" name="email" email></ion-input>
       </ion-item>
-      <span [class.hidden]="addressForm.controls.email?.valid" class="input-error-message">Invalid email format</span>
+      <span [class.hidden]="contactForm.controls.email?.valid" class="input-error-message">Invalid email format</span>
       <ion-item class="input-field bottom-margin">
         <ion-label position="floating">Phone Number</ion-label>
-        <ion-input type="number" name="phone" [(ngModel)]="address.phone"></ion-input>
+        <ion-input type="number" name="phone" [(ngModel)]="contact.phone"></ion-input>
       </ion-item>
   </ion-content>
   <div class="buttons-container">
-    <ion-button class="action-button" #cancelButton slot="end" (click)="cancel(addressForm)" color="light">Cancel</ion-button>
+    <ion-button class="action-button" #cancelButton slot="end" (click)="cancel(contactForm)" color="light">Cancel</ion-button>
     <ion-button class="action-button left-margin" slot="end" type="submit" color="secondary">Save</ion-button>
   </div>
 </form>
