--- a/src/app/components/address-book/edit-contact/edit-contact.component.html
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title mode="md">
       {{edit ? 'Edit ' : 'Add '}} Contact
     </ion-title>
     <ion-button slot="end" fill="clear" (click)="delete()" color="danger" size="small" *ngIf="edit">
