--- a/src/app/components/address-book/edit-contact/edit-contact.component.html
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.html
@@ -13,23 +13,24 @@
 </ion-header>
 <form #contactForm="ngForm" (ngSubmit)="save(contactForm)" (keyup.enter)="save(contactForm)" class="content">
   <ion-content>
-      <ion-item class="input-field bottom-margin">
-        <ion-label position="floating">Name</ion-label>
-        <ion-input name="name" [(ngModel)]="contact.name" clearInput></ion-input>
-      </ion-item>
-      <ion-item class="input-field bottom-margin">
-        <ion-label position="floating">Address</ion-label>
-        <ion-input name="address" [(ngModel)]="contact.address" clearInput></ion-input>
-      </ion-item>
-      <ion-item class="input-field">
-        <ion-label position="floating">Email</ion-label>
-        <ion-input [(ngModel)]="contact.email" name="email" email clearInput></ion-input>
-      </ion-item>
-      <span [class.hidden]="contactForm.controls.email?.valid" class="input-error-message">Invalid email format</span>
-      <ion-item class="input-field bottom-margin">
-        <ion-label position="floating">Phone Number</ion-label>
-        <ion-input type="number" name="phone" [(ngModel)]="contact.phone" clearInput></ion-input>
-      </ion-item>
+    <app-img-loader [(image)]="contact.img" canEdit=true></app-img-loader>
+    <ion-item class="input-field bottom-margin">
+      <ion-label position="floating">Name</ion-label>
+      <ion-input name="name" [(ngModel)]="contact.name" clearInput></ion-input>
+    </ion-item>
+    <ion-item class="input-field bottom-margin">
+      <ion-label position="floating">Address</ion-label>
+      <ion-input name="address" [(ngModel)]="contact.address" clearInput></ion-input>
+    </ion-item>
+    <ion-item class="input-field">
+      <ion-label position="floating">Email</ion-label>
+      <ion-input [(ngModel)]="contact.email" name="email" email clearInput></ion-input>
+    </ion-item>
+    <span [class.hidden]="contactForm.controls.email?.valid" class="input-error-message">Invalid email format</span>
+    <ion-item class="input-field bottom-margin">
+      <ion-label position="floating">Phone Number</ion-label>
+      <ion-input type="number" name="phone" [(ngModel)]="contact.phone" clearInput></ion-input>
+    </ion-item>
   </ion-content>
   <div class="buttons-container">
     <ion-button class="action-button" #cancelButton slot="end" (click)="cancel(contactForm)" color="light">Cancel</ion-button>
