--- a/src/app/components/address-book/edit-contact/edit-contact.component.html
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.html
@@ -3,12 +3,14 @@
     <ion-title mode="md">
       {{edit ? 'Edit ' : 'Add '}} Contact
     </ion-title>
-    <ion-button slot="end" fill="clear" (click)="delete()" color="danger" size="small" *ngIf="edit">
-      <ion-icon name="trash-outline"></ion-icon>
-    </ion-button>
-    <ion-button slot="end" fill="clear" (click)="cancel(contactForm)" color="medium" size="small">
-      <ion-icon name="close-outline"></ion-icon>
-    </ion-button>
+    <ion-buttons slot="end">
+      <ion-button fill="clear" (click)="delete()" color="danger" size="small" *ngIf="edit">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-button>
+      <ion-button fill="clear" (click)="cancel(contactForm)" color="medium" size="small">
+        <ion-icon name="close-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <form #contactForm="ngForm" (ngSubmit)="save(contactForm)" (keyup.enter)="save(contactForm)" class="content">
