--- a/src/app/components/address-book/view-contact/view-contact.component.html
+++ b/src/app/components/address-book/view-contact/view-contact.component.html
@@ -3,15 +3,17 @@
     <ion-title mode="md">
       View Contact
     </ion-title>
-    <ion-button slot="end" fill="clear" (click)="edit()" color="secondary" size="small">
-      <ion-icon name="create-outline"></ion-icon>
-    </ion-button>
-    <ion-button slot="end" fill="clear" (click)="delete()" color="danger" size="small">
-      <ion-icon name="trash-outline"></ion-icon>
-    </ion-button>
-    <ion-button slot="end" fill="clear" (click)="close()" color="medium" size="small">
-      <ion-icon name="close-outline"></ion-icon>
-    </ion-button>
+    <ion-buttons slot="end">
+      <ion-button fill="clear" (click)="edit()" color="secondary" size="small">
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-button>
+      <ion-button  fill="clear" (click)="delete()" color="danger" size="small">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-button>
+      <ion-button fill="clear" (click)="close()" color="medium" size="small">
+        <ion-icon name="close-outline"></ion-icon>
+      </ion-button>
+  </ion-buttons>
   </ion-toolbar>
 </ion-header>
   <ion-content>
@@ -36,6 +38,10 @@
             <a (click)="platformService.openPhoneOptions(contact,$event)">{{ contact.phone | phone }}</a>
           </ng-template>
         </ion-label>
+      </ion-item>
+      <ion-item *ngIf="contact.note">
+        <ion-icon name="reader-outline" slot="start"></ion-icon>
+        <ion-label class="ion-text-wrap">{{contact.note}}</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
