--- a/src/app/components/address-book/address-book.component.scss
+++ b/src/app/components/address-book/address-book.component.scss
@@ -28,6 +28,10 @@
                 font-size: 40px;
                 padding-top: 3px;
             }
+
+            .note-icon{
+                font-size: 25px;
+            }
         }
     }
 }
