--- a/src/global.scss
+++ b/src/global.scss
@@ -27,12 +27,15 @@
 
 
 .contact-modal{
-    --height: 426px;
     --width: 350px;
 }
 
 .phone-options-popover{
     --width: 100px;
+}
+
+.view-text-popover{
+    --width: 300px;
 }
 
 .hidden{
