--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-menu-button menu="menu"></ion-menu-button>
     </ion-buttons>
     <ion-title mode="md">
-      Address Book - {{addressBookService.selectedFilterType}}
+      Address Book - {{addressBookService.selectedFilterType || addressBookService.selectedLabel.title}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
