--- a/src/app/components/address-book/view-contact/view-contact.component.html
+++ b/src/app/components/address-book/view-contact/view-contact.component.html
@@ -46,5 +46,11 @@
         <ion-icon name="reader-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap">{{contact.note}}</ion-label>
       </ion-item>
+      <ion-item  *ngIf="contact.labels && contact.labels.length">
+        <ion-icon name="pricetags-outline" slot="start"></ion-icon>
+        <ion-chip *ngFor="let label of contactLabels">
+          <ion-label>{{label.title}}</ion-label>
+        </ion-chip>
+      </ion-item>
     </ion-list>
   </ion-content>
