improved styling to address book page and table column widths; contacts created on favorites page are automatically favorited; edit contact popup header reflects if contact will be favorited, improved save and delete contact toast messages; changed manage labels button to an icon; updated phone number sms icon

--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -4,13 +4,13 @@
       <ion-menu-button menu="menu"></ion-menu-button>
     </ion-buttons>
     <ion-title mode="md">
-      Address Book - {{addressBookService.selectedFilterType || addressBookService.selectedLabel.title}}
+      Address Book - {{(addressBookService.selectedFilterType | titlecase) || addressBookService.selectedLabel.title}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-toolbar>
-  <ion-searchbar placeholder="Search" [(ngModel)]="filterText" (ionChange)="applyFilter()"></ion-searchbar>
+  <ion-searchbar placeholder="Search" [(ngModel)]="filterText" (ionChange)="applyFilter()" class="filter-input"></ion-searchbar>
 </ion-toolbar>
 
 <ion-content [fullscreen]="true">
@@ -49,7 +49,7 @@
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th class="column header" mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
+        <th class="column header phone-column" mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
         <td class="column" mat-cell *matCellDef="let contact">
           <ng-container *ngIf="!platformService.isMobileDevice; else phoneWithLinks">{{ contact.phone | phone }}
           </ng-container>
