--- a/src/app/components/phone-options/phone-options.component.html
+++ b/src/app/components/phone-options/phone-options.component.html
@@ -4,6 +4,6 @@
   </ion-button>
 
   <ion-button slot="end" fill="clear" color="secondary" size="small" [href]="'sms:'+contact.phone">
-    <ion-icon name="mail-outline"></ion-icon>
+    <ion-icon name="chatbox-ellipses-outline"></ion-icon>
   </ion-button>
 </div>
