--- a/src/app/components/address-book/address-book.component.scss
+++ b/src/app/components/address-book/address-book.component.scss
@@ -1,3 +1,7 @@
+.filter-input{
+    padding: 3px;
+}
+
 .table-container{
     margin: 0 15px 15px 15px;
 
@@ -6,7 +10,6 @@
         
         .column{
             padding-right: 15px;
-            word-break: break-all;
             
             &.header{
                 background: var(--ion-background-color);
@@ -14,6 +17,10 @@
 
             &.img-column{
                 width: 70px;
+            }
+
+            &.phone-column{
+                width: 130px;
             }
 
             .contact-img{
