--- a/src/app/components/address-book/edit-contact/edit-contact.component.html
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.html
@@ -54,6 +54,6 @@
   </ion-content>
   <div class="buttons-container">
     <ion-button class="action-button" slot="end" (click)="cancel(contactForm)" color="light">Cancel</ion-button>
-    <ion-button class="action-button left-margin" slot="end" type="submit" color="secondary">Save</ion-button>
+    <ion-button class="action-button left-margin" slot="end" type="submit" color="secondary" [disabled]="emptyForm(contactForm)">Save</ion-button>
   </div>
 </form>
