added hover state to clickable style; increased modal sizes; added an about popup to explain everything about the app; added about button to side menu to open about popeup

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -36,6 +36,10 @@
           <span>({{label.count}})</span>
         </ion-label>
       </ion-item>
+      
+      <mat-divider></mat-divider>
+      
+      <ion-button expand="block" fill="clear" (click)="showAboutInfo()" color="medium">About</ion-button>
     </ion-list>
   </ion-content>
 </ion-menu>
