improved modal dark mode styles; removed mock data; add label button in edit contact component brings up option to create/manage labels when no labels have been created yet; deployed latest changes to firebase

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -17,7 +17,7 @@
       In this app you can create and organize your contacts into an address book.
       You can add an image, name, address, email, phone number, notes, and customized labels to contacts.
       Labels can be used to create groups of contacts.
-      You can use the quick links to pull up the address on a map, start an email, and call or text your contacts' phone number.
+      You can use the quick links to pull up an address on a map, start an email, and call or text a phone number.
       You can also favorite a contact and view all favorited contacts using the side menu.
     </div>
 
@@ -25,6 +25,7 @@
     <div class="bottom-margin">
       Click the plus icon in the top right corner to create a contact.
       When you are creating a contact, you must add at least one detail, other than an image, to save the contact.
+      Trying to add a label to a contact when there are no labels created will open an option to create labels.
     </div>
     <div class="bottom-margin">
       When creating a contact while viewing a label group, the label will be pre-selected to the contact for you. The label can be unselected.
@@ -37,7 +38,7 @@
       The contacts in the table can be filtered by typing into the search bar.
       The table will show contacts that have data in one of the visible columns that contain the search text.
       If a note has been added to the contact, it can be viewed by clicking on the note icon in the table.
-      Clicking on the address and email of a contact in the table or view contact pop-up will pull up a map of the address and email page, respectively.
+      Clicking on an address or email of a contact in the table or view contact pop-up will pull up a map of an address or email page, respectively.
       All info of a contact can be viewed in a pop-up by clicking on the contact row. 
     </div>
 
