--- a/src/app/components/address-book/edit-contact/edit-contact.component.scss
+++ b/src/app/components/address-book/edit-contact/edit-contact.component.scss
@@ -6,6 +6,7 @@
 
     .input-field{
         --padding-start: 0;
+        --background: transparent;
 
         .bottom-margin{
             margin-bottom: 14px;
