--- a/src/app/components/address-book/view-contact/view-contact.component.scss
+++ b/src/app/components/address-book/view-contact/view-contact.component.scss
@@ -1,5 +1,7 @@
-.content{
-    display: flex;
-    flex-direction: column;
-    flex: auto;
+.fields{
+    background: transparent;
+
+    .field{
+        --background: transparent;
+    }
 }
