--- a/src/app/components/address-book/view-contact/view-contact.component.html
+++ b/src/app/components/address-book/view-contact/view-contact.component.html
@@ -21,19 +21,23 @@
 </ion-header>
   <ion-content>
     <app-img-loader [(image)]="contact.img"></app-img-loader>
-    <ion-list lines="none">
-      <ion-item *ngIf="contact.name" lines="full">
+
+    <ion-list lines="none" class="fields">
+      <ion-item *ngIf="contact.name" lines="full" class="field">
         <ion-label class="ion-text-wrap">{{contact.name}}</ion-label>
       </ion-item>
-      <ion-item *ngIf="contact.address">
+
+      <ion-item *ngIf="contact.address"  class="field">
         <ion-icon name="location-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap"><a [href]="contact.address | mapLink">{{contact.address}}</a></ion-label>
       </ion-item>
-      <ion-item *ngIf="contact.email">
+
+      <ion-item *ngIf="contact.email"  class="field">
         <ion-icon name="mail-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap"><a [href]="'mailto:'+contact.email">{{contact.email}}</a></ion-label>
       </ion-item>
-      <ion-item *ngIf="contact.phone">
+
+      <ion-item *ngIf="contact.phone"  class="field">
         <ion-icon name="call-outline" slot="start"></ion-icon>
         <ion-label>
           <ng-container *ngIf="!platformService.isMobileDevice; else phoneWithLinks">{{ contact.phone | phone }}</ng-container>
@@ -42,15 +46,19 @@
           </ng-template>
         </ion-label>
       </ion-item>
-      <ion-item *ngIf="contact.note">
+
+      <ion-item *ngIf="contact.note"  class="field">
         <ion-icon name="reader-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap">{{contact.note}}</ion-label>
       </ion-item>
-      <ion-item  *ngIf="contact.labels && contact.labels.length">
+
+      <ion-item *ngIf="contact.labels && contact.labels.length"  class="field">
         <ion-icon name="pricetags-outline" slot="start"></ion-icon>
-        <ion-chip *ngFor="let label of contactLabels">
-          <ion-label>{{label.title}}</ion-label>
-        </ion-chip>
+        <ion-label class="ion-text-wrap">
+          <ion-chip *ngFor="let label of contactLabels">
+            <ion-label>{{label.title}}</ion-label>
+          </ion-chip>
+        </ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
