--- a/src/app/components/labels/manage-labels/manage-labels.component.html
+++ b/src/app/components/labels/manage-labels/manage-labels.component.html
@@ -15,7 +15,7 @@
   <ion-content>
     <ng-container *ngFor="let label of labels; let i = index">
 
-      <ion-item class="input-field">
+      <ion-item class="input-field field">
         <ion-label position="fixed" class="label-placeholder">Label:</ion-label>
         <ion-input [name]="label.id" required [(ngModel)]="label.title" clearInput></ion-input>
         <ion-icon name="trash-outline" slot="end" (click)="delete(label)" class="clickable"></ion-icon>
@@ -23,7 +23,7 @@
       <span [class.hidden]="labelsForm.controls[label.id]?.valid" class="input-error-message">Required</span>
     </ng-container>
 
-    <ion-item lines="none">
+    <ion-item lines="none" class="field">
       <ion-button fill="clear" (click)="add()" color="secondary" size="small">
         <ion-icon name="add-outline"></ion-icon>
         <ion-label>Add Label</ion-label>
