--- a/src/app/components/labels/manage-labels/manage-labels.component.scss
+++ b/src/app/components/labels/manage-labels/manage-labels.component.scss
@@ -13,6 +13,10 @@
             min-width: 50px;
         }
     }
+
+    .field{
+        --background: transparent;
+    }
     
     .buttons-container{
         display: flex;
