--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -26,7 +26,7 @@
       <ion-item>
         <ion-icon name="pricetag-outline" slot="start"></ion-icon>
         <ion-label>Labels</ion-label>
-        <ion-button fill="clear" (click)="manageLabels()" color="dark" size="small" slot="end" class="edit-labels-icon">
+        <ion-button fill="clear" (click)="addressBookService.openManageLabels()" color="dark" size="small" slot="end" class="edit-labels-icon">
           <ion-icon name="create-outline"></ion-icon>
         </ion-button>
       </ion-item>
